--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,15 @@
-header{
-    font-size: 18px;
-    h1{
-        font-size: 32px;
-    }
-}
+// .kalnia-<uniquifier> {
+//   font-family: "Kalnia", serif;
+//   font-optical-sizing: auto;
+//   font-weight: <weight>;
+//   font-style: normal;
+//   font-variation-settings:
+//     "wdth" 100;
+// }
+
+// .roboto-thin {
+//   font-family: "Roboto", sans-serif;
+//   font-weight: 100;
+//   font-style: normal;
+// }
+
