--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,6 +1,31 @@
-header {
-  font-size: 18px;
-}
-header h1 {
-  font-size: 32px;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  width: 100%;
+  height: 105px;
+  background-color: aqua;
+
+  .navigation {
+    @extend %flexbetween;
+
+    .logo {
+      a {
+        font-family: "Kalnia", serif;
+        font-size: 48px;
+        line-height: 64.56px;
+        color: white;
+      }
+    }
+
+    .nav {
+      ul {
+        @extend %flexbetween;
+        margin: 0 auto;
+        gap: 24px;
+        
+      }
+    }
+  }
 }
