--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,3 +1,10 @@
+// ცვლადი
+// $white:#FFFFFF;
+// $fontRoboto: "Roboto", sans-serif;
+$fontLogo: "Kalnia", serif;
+$fontRoboto: "Roboto", sans-serif;
+$darckorange: #C85100;
+
 .header {
   position: fixed;
   top: 0;
@@ -5,17 +12,19 @@
   z-index: 99;
   width: 100%;
   height: 105px;
-  background-color: aqua;
+  background: transparent;
+
 
   .navigation {
     @extend %flexbetween;
 
     .logo {
       a {
-        font-family: "Kalnia", serif;
+        font-family: $fontLogo;
         font-size: 48px;
         line-height: 64.56px;
         color: white;
+        
       }
     }
 
@@ -23,8 +32,22 @@
       ul {
         @extend %flexbetween;
         margin: 0 auto;
-        gap: 24px;
-        
+        gap: 40px;
+
+        .item-link {
+          font-family: $fontRoboto;
+          font-size: 28px;
+          line-height: 32px;
+          font-weight: 400;
+          color: white;
+          letter-spacing: 2px;
+          &:hover{
+            color: $darckorange;
+          }
+        }
+        .user-icon{
+          padding:3px;
+        }
       }
     }
   }
