fix header hunc on scroll

--- a/scss/blocks/vars.scss
+++ b/scss/blocks/vars.scss
@@ -13,8 +13,8 @@
 
 // ცვლადი
 
-$breakpoint-tablet: 1260px;
-$breakpoint-mobile: 960px;
+$tablet: 1260px;
+$mobile: 960px;
 
 // fonts
 $fontLogo: "Kalnia", serif;
