add burger menu

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 // @import "./blocks/footer.scss";
 @import "./blocks/global.scss";
 
+// header
 .header {
   position: fixed;
   top: 0;
@@ -19,8 +20,8 @@
     background-color: white;
     & a {
       color: $darckgray;
-      &hover:{
-        color:$darckorange
+      &hover: {
+        color: $darckorange;
       }
     }
   }
@@ -28,12 +29,6 @@
     @extend %flexbetween;
     gap: 20px;
     position: relative;
-  }
-  &:hover {
-    background-color: white;
-    & a {
-      color: $darckgray !important;
-    }
   }
 }
 
@@ -95,6 +90,62 @@
     &:hover {
       color: $orange;
     }
+  }
+}
+.burger-menu {
+  width: 60px;
+  height: 45px;
+  position: relative;
+  margin: 50px auto;
+  transform: rotate(0deg);
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+
+  &__line {
+    display: block;
+    position: absolute;
+    height: 9px;
+    width: 100%;
+    background: #d3531a;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: 0.25s ease-in-out;
+  }
+  & span:nth-child(1) {
+    top: 0px;
+  }
+
+  & span:nth-child(2),
+  & span:nth-child(3) {
+    top: 18px;
+  }
+
+  & span:nth-child(4) {
+    top: 36px;
+  }
+
+  &.open span:nth-child(1) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
+  }
+
+  &.open span:nth-child(2) {
+    
+    transform: rotate(45deg);
+  }
+
+  &.open span:nth-child(3) {
+  
+    transform: rotate(-45deg);
+  }
+
+  &.open span:nth-child(4) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
   }
 }
 
