--- a/scss/main.scss
+++ b/scss/main.scss
@@ -208,13 +208,13 @@
     display: block;
   }
   .mobile-menu{
-    padding: 20px 48px;
+    padding: 20px 0 20px 48px;
     border-radius: 10px;
     position: absolute;
     right: 0;
     top: -28px;
      display: flex;
-    justify-content: center;  
-   width: 138px;
+    justify-content: space-between;  
+    width: 238px;
   }
 }
