add footer styles

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -18,7 +18,7 @@
 }
 
 .active-header {
-  background-color: white;
+  background-color: $bgGray;
   .logo {
     a {
       color: $darckgray !important;
