add footer styles

--- a/scss/blocks/_reset.scss
+++ b/scss/blocks/_reset.scss
@@ -64,3 +64,9 @@ iframe {
 *::after {
     box-sizing: inherit;
 }
+input{
+	border: none;
+	background: transparent;
+	font-size: inherit;
+	color: inherit;
+}
