--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   background-color: $bgGray;
   @extend %font-24-400;
-  padding: 20px 15px;
+  padding: 40px 15px 40px;
 
   &__inner {
     @extend %flexbetween;
@@ -14,8 +14,7 @@
   &__block-2,
   &__block-3,
   .nav-list,
-  .contact-list
-  {
+  .contact-list {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -25,6 +24,9 @@
       color: $darckgray;
     }
   }
+  &__copyright{
+    text-align: center;
+  }
 }
 .description {
   max-width: 282px;
@@ -32,18 +34,46 @@
 }
 .list-title {
   @extend %font-32-400;
-  margin-bottom: 20px;
 }
 .social-icons {
   &__wrapper {
     display: flex;
     align-items: center;
     gap: 20px;
+    margin-top: 20px;
+  }
+  &__item{
+    height: 50px;
   }
 }
-.subscription{
-    display: flex;
-    align-items: start;
-    flex-direction: column;
-   
+
+.subscription {
+  max-width: 225px;
+  width: 100%;
+
+  &__inner {
+    position: relative;
+    padding: 10px 13px;
+    border-radius: 10px;
+    border: 1px solid $darckgray;
+    margin-top: 20px;
+    width: 100%;
+    height: 48px;
+  }
+  &__input {
+    background: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0 20px;
+    height: 100%;
+    width: 100%;
+  }
+  &__btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0 20px;
+    height: 100%;
+  }
 }
