--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,10 +1,11 @@
 .footer {
   background-color: $bgGray;
   @extend %font-24-400;
-  padding: 40px 15px 40px;
+  padding: 40px 0;
 
   &__inner {
     @extend %flexbetween;
+    flex-wrap: wrap;
     align-items: start;
     gap: 20px;
     margin-bottom: 20px;
@@ -14,7 +15,8 @@
   &__block-2,
   &__block-3,
   .nav-list,
-  .contact-list {
+  .contact-list,
+  .footer__contact {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -31,6 +33,7 @@
 .description {
   max-width: 282px;
   width: 100%;
+  display: inline-block;
 }
 .list-title {
   @extend %font-32-400;
@@ -48,8 +51,6 @@
 }
 
 .subscription {
-  max-width: 225px;
-  width: 100%;
 
   &__inner {
     position: relative;
@@ -57,7 +58,7 @@
     border-radius: 10px;
     border: 1px solid $darckgray;
     margin-top: 20px;
-    width: 100%;
+    width: 225px;
     height: 48px;
   }
   &__input {
@@ -67,7 +68,6 @@
     left: 0;
     padding: 0 20px;
     height: 100%;
-    width: 100%;
   }
   &__btn {
     position: absolute;
