--- a/scss/blocks/vars.scss
+++ b/scss/blocks/vars.scss
@@ -15,13 +15,23 @@ font-size: 32px;
 font-weight: 400;
 line-height: 37.5px;
 }
+%font-28-400{
+font-size: 32px;
+font-weight: 400;
+line-height: 37.5px;
+}
+%font-20-400{
+font-size: 20px;
+font-weight: 400;
+line-height: 23px;
+}
 
 // ცვლადი
 
 // breakpoints
 
 $tablet: 1260px;
-$mobile: 960px;
+$mobile: 800px;
 
 // fonts
 $fontLogo: "Kalnia", serif;
