--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,27 +10,77 @@
   background-size: cover;
   height: 100vh;
   position: relative;
- &__inner{
+  &__inner {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 325px;
     width: 100%;
-   text-align: center;
-       display: flex;
+    text-align: center;
+    display: flex;
     flex-direction: column;
-
   }
-  &__title{
+  &__title {
     color: white;
     margin-bottom: 12px;
-    span{
-        font-size: 64px;
-        line-height: 75px;
-        letter-spacing: 4px;
-        font-weight: 600;
+    span {
+      font-size: 64px;
+      line-height: 75px;
+      letter-spacing: 4px;
+      font-weight: 600;
     }
+  }
+  &__btn {
+    max-width: 178px;
+    color: #252525cc;
   }
 }
 
+.services {
+  &__title {
+    margin-bottom: 20px;
+  }
+  &__description {
+    margin-bottom: 10px;
+  }
+  &__link {
+    display: block;
+    font-size: 20px;
+    line-height: 23px;
+    font-weight: 500;
+    text-align: right;
+    color: $darckorange;
+    margin-bottom: 10px;
+  }
+  .cards-wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+
+  
+  }
+
+  .card {
+    flex: 0 1 23%;
+    &__img {
+      border-radius: 20px;
+      overflow: hidden;
+      object-fit: cover;
+      object-position: center;
+      margin-bottom: 10px;
+    }
+    &__title {
+      @extend %font-28-400;
+      margin-bottom: 10px;
+      font-weight: 500;
+    }
+    &__description {
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 21px;
+    }
+  }
