--- a/scss/blocks/_global.scss
+++ b/scss/blocks/_global.scss
@@ -45,12 +45,25 @@ body {
   background: $orange;
   border-radius: 20px;
   padding: 20px 40px;
+  width: 100%;
+  margin: 0 auto;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
   :hover {
     background-color: $darckorange;
   }
 }
-.section-heding{
-font-size: 40px;
-font-weight: 500;
-line-height: 46.88px;
+
+.section {
+  margin-bottom: 60px;
+  &__title {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 46.88px;
+  }
+  &__description{
+        @extend %font-20-400;
+
+  }
 }
