--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -5,7 +5,7 @@
   left: 0;
   z-index: 99;
   width: 100%;
-  height: 65px;
+  height: 105px;
   background: transparent;
   padding: 20px 0;
   transition: all 0.2s ease-in-out;
@@ -96,7 +96,7 @@
 }
 .burger-menu {
   padding: 10px;
-  width: 30px;
+  width: 40px;
   height: 18px;
   position: relative;
   margin: 0 auto;
@@ -135,7 +135,7 @@
   }
 
   & span:nth-child(4) {
-    bottom: 0;
+    top:36px;
   }
 
   &.open span:nth-child(1) {
