add slick carousel js

--- a/scss/blocks/_global.scss
+++ b/scss/blocks/_global.scss
@@ -61,6 +61,7 @@ body {
     font-size: 40px;
     font-weight: 500;
     line-height: 46.88px;
+    margin-bottom: 40px;
   }
   &__description{
         @extend %font-20-400;
